syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.exchangekeys";
option java_outer_classname = "ExchangeKeysService";
option objc_class_prefix = "HLW";
package exchangekeys;
service ExchangeKeys{
    rpc ChangeKey(stream File) returns (Confirmation){}
    rpc CheckCurrentKey(stream File) returns (Confirmation){}
}

message File{
    string name = 1;
    uint32 chunk_size=2;
    uint32 full_size=3;
    uint32 chunk_number=4;
    bytes chunk=5;
}

message Confirmation{
    uint32 code_error=1;
    string message=2;
}
